images sys design

--- a/Bortolin_Samuel_thesis_20.tex
+++ b/Bortolin_Samuel_thesis_20.tex
@@ -24,6 +24,7 @@
 \usepackage{titlesec} % per formato custom dei titoli dei capitoli
 % \usepackage{hyperref} % per i collegamenti ipertestuali, da togliere per la consegna della tesi
 \usepackage[output-decimal-marker={,}]{siunitx} % unita' di misura con convenzioni tipografiche italiane che prevedono la virgola e non il punto
+\usepackage{wrapfig}
 
 %%%%%%%%%%%%%%
 % supporto lettere accentate
